# faster

./: .gitignore  ARCHITECTURE.md  AUDIT_RESULTS.md  CLAUDE.md  CLAUDE_INTEGRATION_INDEX.md  CLAUDE_PROVIDER_DESIGN.md  CLAUDE_PROVIDER_EXAMPLE.php  CLAUDE_PROVIDER_SUMMARY.md  Cargo.toml  PROPOSAL.md  README.md  SKILL_ARCHITECTURE.md  ZELLIJ_SETUP.md  build-plugin.sh  faster  install.sh  plugin.yaml
src/: config.rs  lib.rs  main.rs
src/audio/: mod.rs  stt.rs  tts.rs
src/bridge/: mod.rs
src/executor/: claude.rs  mod.rs
src/intent/: mod.rs  processor.rs  schema.rs
src/knowledge/: mod.rs
src/plugin/: mod.rs
src/queue/: db.rs  mod.rs
